# sfmlsnake

./: .gitignore  README.md  docs.md  updatelogs.md
snake/: CMakeLists.txt  READMEdev.md  linuxconfigbuildinstall.sh  windowsbuildandrun.bat  windowsconfigbuildinstall.bat  windowsconfigbuildinstall.sh
snake/source/: 2playergameloop.cpp  gameloop.cpp  icon.rc  leaderboardmenu.cpp  mainheader.h  mainmenu.cpp  mainmenufunctions.cpp  mainmenuheader.h  settingsmenu.cpp
snake/tinyfiledialogs/: CMakeLists.txt
